--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,74 +1,94 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <title>Orbitar Settings</title>
     <style>
       body {
-        width: 300px;
-        padding: 15px;
-        font-family: sans-serif;
+        width: 320px;
+        margin: 0;
+        padding: 16px;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          sans-serif;
+        background: #020617;
+        color: #e5e7eb;
       }
       h1 {
         font-size: 16px;
-        margin-top: 0;
+        margin: 0 0 4px;
+      }
+      p {
+        font-size: 12px;
+        margin: 0 0 12px;
+        color: #9ca3af;
       }
       label {
         display: block;
-        margin-top: 10px;
         font-size: 12px;
-        color: #666;
+        margin-top: 12px;
+        margin-bottom: 4px;
       }
       input {
         width: 100%;
-        padding: 8px;
-        margin-top: 5px;
-        border: 1px solid #ddd;
-        border-radius: 4px;
         box-sizing: border-box;
+        padding: 8px;
+        border-radius: 6px;
+        border: 1px solid #4b5563;
+        background: #020617;
+        color: #e5e7eb;
+        font-size: 12px;
       }
       button {
+        margin-top: 12px;
         width: 100%;
-        margin-top: 15px;
         padding: 8px;
-        background: #6366f1;
-        color: white;
+        border-radius: 6px;
         border: none;
-        border-radius: 4px;
+        background: #4f46e5;
+        color: white;
+        font-size: 13px;
         cursor: pointer;
       }
       button:hover {
-        background: #4f46e5;
+        background: #4338ca;
       }
       .status {
-        margin-top: 10px;
-        font-size: 12px;
-        color: green;
         display: none;
+        margin-top: 6px;
+        font-size: 11px;
+        color: #22c55e;
       }
       .links {
-        margin-top: 15px;
-        border-top: 1px solid #eee;
-        padding-top: 10px;
+        margin-top: 16px;
         font-size: 12px;
       }
-      a {
-        color: #6366f1;
+      .links a {
+        color: #93c5fd;
         text-decoration: none;
+      }
+      .links a:hover {
+        text-decoration: underline;
       }
     </style>
   </head>
   <body>
-    <h1>Orbitar Settings</h1>
+    <h1>Orbitar</h1>
+    <p>Paste your Orbitar API key. We only use it to call getorbitar.com for you.</p>
 
-    <label for="token">API Token</label>
+    <label for="token">API key</label>
     <input type="password" id="token" placeholder="Paste your API key here" />
 
-    <button id="save">Save Settings</button>
+    <button id="save">Save settings</button>
     <div id="status" class="status">Saved!</div>
 
     <div class="links">
-      <a href="http://localhost:3000/dashboard" target="_blank"
-        >Get API Token</a
+      <a
+        href="http://localhost:3000/dashboard"
+        target="_blank"
+        rel="noopener noreferrer"
       >
+        Open dashboard
+      </a>
     </div>
 
     <script src="popup.js"></script>
